; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/kgdb/extr_trgt.c_kgdb_kernbase.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/kgdb/extr_trgt.c_kgdb_kernbase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.minimal_symbol = type { i32 }

@kgdb_kernbase.kernbase = internal global i64 0, align 8
@.str = private unnamed_addr constant [9 x i8] c"kernbase\00", align 1
@KERNBASE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @kgdb_kernbase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @kgdb_kernbase() #0 {
  %1 = alloca %struct.minimal_symbol*, align 8
  %2 = load i64, i64* @kgdb_kernbase.kernbase, align 8
  %3 = icmp eq i64 %2, 0
  br i1 %3, label %4, label %14

4:                                                ; preds = %0
  %5 = call %struct.minimal_symbol* @lookup_minimal_symbol(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32* null, i32* null)
  store %struct.minimal_symbol* %5, %struct.minimal_symbol** %1, align 8
  %6 = load %struct.minimal_symbol*, %struct.minimal_symbol** %1, align 8
  %7 = icmp eq %struct.minimal_symbol* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %4
  %9 = load i64, i64* @KERNBASE, align 8
  store i64 %9, i64* @kgdb_kernbase.kernbase, align 8
  br label %13

10:                                               ; preds = %4
  %11 = load %struct.minimal_symbol*, %struct.minimal_symbol** %1, align 8
  %12 = call i64 @SYMBOL_VALUE_ADDRESS(%struct.minimal_symbol* %11)
  store i64 %12, i64* @kgdb_kernbase.kernbase, align 8
  br label %13

13:                                               ; preds = %10, %8
  br label %14

14:                                               ; preds = %13, %0
  %15 = load i64, i64* @kgdb_kernbase.kernbase, align 8
  ret i64 %15
}

declare dso_local %struct.minimal_symbol* @lookup_minimal_symbol(i8*, i32*, i32*) #1

declare dso_local i64 @SYMBOL_VALUE_ADDRESS(%struct.minimal_symbol*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
